# aws-api-gateway-mtls

./: .gitignore  .pylintrc  Dockerfile  docker-compose.yaml
mtls_authorizer/: Dockerfile  docker-compose.yaml  lambda_entry_script.sh  pyproject.toml
mtls_authorizer/mtls_authorizer/: iam.py  lambda_handler.py  ocsp.py
mtls_authorizer/wheels/: cryptography-37.0.0.dev1-cp310-cp310-linux_x86_64.whl
terraform/app/: acm.tf  api_gateway.tf  ip.tf  mtls_authorizer.tf  output.tf  provider.tf  s3.tf  variables.tf  waf.tf
terraform/mtls_gateway/: api_gateway.tf  ecr.tf  elb.tf  mtls_authorizer.tf  output.tf  provider.tf  route53.tf  s3.tf  variables.tf
terraform/setup/: .terraform.lock.hcl  ecr.tf  output.tf  provider.tf  variables.tf
terraform/web/: ecr.tf  mtls_gateway.tf  output.tf  provider.tf  variables.tf  vpc.tf  vpce.tf  web.tf
web/: Dockerfile  docker-compose.yml  package.json
