[tool.poetry]
name = "mtls_authorizer"
version = "0.1.0"
description = ""
authors = ["Daniel Gimeno <dgimeno777@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
cryptography = "^36.0.2"
loguru = "^0.6.0"
awslambdaric = "^2.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
